fixed? whitespace issue

--- a/app/assets/stylesheets/global_styles.scss
+++ b/app/assets/stylesheets/global_styles.scss
@@ -1,16 +1,11 @@
-html {
-    height: 100%;
-    box-sizing: border-box;
-}
-
 body {
     position: relative;
-    height: 100%;
+    min-height: 100%;
     min-width: 100%;
 }
 
 .container {
-    min-height: 88vh;
+    min-height: 100vh;
     overflow: hidden;
     display: block;
     position: relative;
